fix(scss): fix elemento decorativo z-index

--- a/src/scss/custom/r-engineering/main/_sections.scss
+++ b/src/scss/custom/r-engineering/main/_sections.scss
@@ -325,7 +325,7 @@
   width: 364px;
   height: 245px;
 //  position: absolute; // fornito da bootstrap 5
-  z-index: 0;
+  z-index: -1;
   top: 0;
   right: -50px;
   @include media-breakpoint-up(sm) {
